--- a/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
+++ b/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
@@ -45,6 +45,9 @@ dolomite_maker_fee_amount:
 dolomite_taker_fee_amount:
 
 
+hitbtc_maker_fee:
+hitbtc_taker_fee:
+
 loopring_maker_fee:
 loopring_taker_fee:
 
