--- a/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
+++ b/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
@@ -17,6 +17,9 @@ beaxy_taker_fee:
 coinbase_pro_maker_fee:
 coinbase_pro_taker_fee:
 
+coinzoom_maker_fee:
+coinzoom_taker_fee:
+
 dydx_maker_fee:
 dydx_taker_fee:
 
