--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -34,6 +34,9 @@ coinbase_pro_api_key: null
 coinbase_pro_secret_key: null
 coinbase_pro_passphrase: null
 
+coinzoom_api_key: null
+coinzoom_secret_key: null
+
 dydx_eth_private_key: null
 dydx_node_address: null
 
