--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -36,6 +36,7 @@ coinbase_pro_passphrase: null
 
 coinzoom_api_key: null
 coinzoom_secret_key: null
+coinzoom_username: null
 
 dydx_eth_private_key: null
 dydx_node_address: null
