changed strategy parameters to descriptive names and added printable_key to be used in the listing of strategy config parameters

--- a/hummingbot/templates/conf_fieldfare_mm_strategy_TEMPLATE.yml
+++ b/hummingbot/templates/conf_fieldfare_mm_strategy_TEMPLATE.yml
@@ -43,9 +43,9 @@ min_spread: null
 max_spread: null
 vol_to_spread_multiplier: null
 inventory_risk_aversion: null
-kappa: null
-gamma: null
-eta: null
+order_book_depth_factor: null
+risk_factor: null
+order_amount_shape_factor: null
 closing_time: null
 
 # Buffer size used to store historic samples and calculate volatility
