Idex/development ak tech bmorenus feat/exchange 2 (#43)
* updated exchange testing and associated classes

* updated

* update

* exchange tests 1 and 2 working

* updated logger in api_user_stream_data_source

* addressed error with get_order url parameter redundancy

* updated issue with get_order in idex_exchnage

* cancel order testing complete

* reverted sandbox

* updates

* sandbox False

* cancel_all tests complete

* sandbox off

* updated per testing

* turned off sandbox

* updated

* moved self._status_polling_task call to top of start_network

* updated

* update

* task 4 updates and fee testing

* removed comments lines from imports in testing for idex_exchange

* removed comments lines from imports in testing for idex_exchange again

* adjust import formatting

* adjusted comments in idex_utils

* updated testing

--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -52,6 +52,9 @@ ftx_api_key: null
 ftx_secret_key: null
 ftx_subaccount_name: null
 
+idex_api_key: null
+idex_secret_key: null
+
 huobi_api_key: null
 huobi_secret_key: null
 
