--- a/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
+++ b/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
@@ -38,6 +38,9 @@ kucoin_taker_fee:
 crypto_com_maker_fee:
 crypto_com_taker_fee:
 
+idex_maker_fee:
+idex_taker_fee:
+
 bitfinex_maker_fee:
 bitfinex_taker_fee:
 
