feat/Implement Task4 with ConfVars for different domains (#46)
* feat/Implement Task4 with ConfVars for different domains

* Fixing a few typos and updating tests for new domain conf KEYS resolution

--- a/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
+++ b/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
@@ -41,6 +41,15 @@ crypto_com_taker_fee:
 idex_maker_fee:
 idex_taker_fee:
 
+idex_bsc_maker_fee:
+idex_bsc_taker_fee:
+
+idex_sandbox_eth_maker_fee:
+idex_sandbox_eth_taker_fee:
+
+idex_sandbox_bsc_maker_fee:
+idex_sandbox_bsc_taker_fee:
+
 bitfinex_maker_fee:
 bitfinex_taker_fee:
 
