Added mandala api key & secret to config_global_TEMPLATE

--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -48,6 +48,9 @@ loopring_exchangeaddress: null
 loopring_api_key: null
 loopring_private_key: null
 
+mandala_api_key: null
+mandala_api_secret: null
+
 kucoin_api_key: null
 kucoin_secret_key: null
 kucoin_passphrase: null
