dydx perpetual connector

--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -81,6 +81,7 @@ dependencies:
     - deprecated==1.2.7
     - distlib==0.3.0
     - dydx-python==0.11.2
+    - dydx-v3-python==1.0.0
     - entrypoints==0.3
     - eth-abi==2.1.1
     - eth-account==0.4.0
