--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -37,6 +37,13 @@ coinbase_pro_passphrase: null
 dydx_eth_private_key: null
 dydx_node_address: null
 
+dydx_perpetual_api_key: null
+dydx_perpetual_api_secret: null
+dydx_perpetual_passphrase: null
+dydx_perpetual_account_number: null
+dydx_perpetual_stark_private_key: null
+dydx_perpetual_ethereum_address: null
+
 huobi_api_key: null
 huobi_secret_key: null
 
