Renamed strategy to avellaneda_market_making_

--- a/hummingbot/templates/conf_avellaneda_market_making_strategy_TEMPLATE.yml
+++ b/hummingbot/templates/conf_avellaneda_market_making_strategy_TEMPLATE.yml
@@ -1,5 +1,5 @@
 ########################################################
-###       Fieldfare market making strategy config    ###
+###       Avellaneda market making strategy config    ###
 ########################################################
 
 template_version: 1
