--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -3,7 +3,7 @@
 #################################
 
 # For more detailed information: https://docs.hummingbot.io
-template_version: 20
+template_version: 21
 
 # Exchange configs
 bamboo_relay_use_coordinator: false
@@ -88,6 +88,8 @@ probit_secret_key: null
 
 probit_kr_api_key: null
 probit_kr_secret_key: null
+
+stex_access_token: null
 
 # Ethereum wallet address: required for trading on a DEX
 ethereum_wallet: null
