--- a/hummingbot/templates/hummingbot_logs_TEMPLATE.yml
+++ b/hummingbot/templates/hummingbot_logs_TEMPLATE.yml
@@ -35,6 +35,7 @@ handlers:
         class: hummingbot.logger.reporting_proxy_handler.ReportingProxyHandler
         level: DEBUG
         proxy_url: https://api.coinalpha.com/reporting-proxy-v2
+        enable_order_event_logging: false
         capacity: 1
     "null":
         class: logging.NullHandler
