Restructure test file directory to match that of the main hummingbot tests

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -100,6 +100,8 @@ jobs:
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate hummingbot
           nosetests -d -v test/test*.py
+          test/**/test*.py
+          find . -iname "" | xargs nosetest -d -v
       
       # Notify results to discord
       - uses: actions/setup-ruby@v1
