--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master, development ]
   pull_request:
-    branches: [ master, development ]
+    branches: [ master, development, refactor/unit_tests ]
     types: [ready_for_review, opened, synchronize, reopened]
 
 jobs:
