--- a/hummingbot/templates/conf_avellaneda_market_making_strategy_TEMPLATE.yml
+++ b/hummingbot/templates/conf_avellaneda_market_making_strategy_TEMPLATE.yml
@@ -2,7 +2,7 @@
 ###       Avellaneda market making strategy config    ###
 ########################################################
 
-template_version: 2
+template_version: 3
 strategy: null
 
 # Exchange and token parameters.
@@ -34,8 +34,23 @@ filled_order_delay: null
 # Target base asset inventory percentage target to be maintained (for Inventory skew feature).
 inventory_target_base_pct: null
 
+# Number of levels of orders to place on each side of the order book.
+order_levels: null
+
 # Whether to enable adding transaction costs to order price calculation (true/false).
 add_transaction_costs: null
+
+# Use user provided orders to directly override the orders placed by order_amount and order_level_parameter
+# This is an advanced feature and user is expected to directly edit this field in config file
+# Below is an sample input, the format is a dictionary, the key is user-defined order name, the value is a list which includes buy/sell, order spread, and order amount
+# order_override:
+#   order_1: [buy, 0.5, 100]
+#   order_2: [buy, 0.75, 200]
+#   order_3: [sell, 0.1, 500]
+# Please make sure there is a space between : and [
+order_override: null
+
+
 
 # Avellaneda - Stoikov algorithm parameters
 parameters_based_on_spread: null
