--- a/hummingbot/templates/conf_dev_4_twap_strategy_TEMPLATE.yml
+++ b/hummingbot/templates/conf_dev_4_twap_strategy_TEMPLATE.yml
@@ -2,14 +2,14 @@
 ###       Execution4 strategy config               ###
 ########################################################
 
-template_version: 2
+template_version: 3
 strategy: null
 # The following configuations are only required for the
 # twap strategy
 
 # Exchange and token parameters
+exchange: null
 market: null
-market_trading_pair_tuple: null
 
 # Type of Order (Limit/Market)
 order_type: null
