--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -4,37 +4,37 @@ channels:
   - defaults
 dependencies:
   - appnope=0.1.0=py38_0
-  - blas=1.0=openblas
-  - blosc=1.16.3=hd9629dc_0
-  - bzip2=1.0.8=h1de35cc_0
+  - blas=1.1=openblas
+  - blosc=1.21.0=he49afe7_0
+  - bzip2=1.0.8=h0d85af4_4
   - ca-certificates=2021.5.30=h033912b_0
   - certifi=2021.5.30=py38h50d1736_0
-  - hdf5=1.10.4=hfa1e0ec_0
-  - intel-openmp=2019.4=233
-  - libblas=3.8.0=17_openblas
-  - libcblas=3.8.0=17_openblas
-  - libcxx=9.0.1=1
-  - libedit=3.1.20181209=hb402a30_0
-  - libffi=3.2.1=h6de7cb9_1006
-  - libgfortran=3.0.1=h93005f0_2
-  - liblapack=3.8.0=17_openblas
-  - libopenblas=0.3.10=h0794777_0
-  - lz4-c=1.8.1.2=h1de35cc_0
-  - lzo=2.10=h362108e_2
+  - hdf5=1.10.5=nompi_h0cbb7df_1103
+  - intel-openmp=2021.2.0=hecd8cb5_564
+  - libblas=3.8.0=7_hd44dcd8_netlib
+  - libcblas=3.8.0=7_hd44dcd8_netlib
+  - libcxx=11.1.0=habf9029_0
+  - libedit=3.1.20191231=hed1e85f_2
+  - libffi=3.2.1=hb1e8313_1007
+  - libgfortran=3.0.1=0
+  - liblapack=3.8.0=7_hd44dcd8_netlib
+  - libopenblas=0.3.13=h7ddc91c_0
+  - lz4-c=1.9.3=h046ec9c_0
+  - lzo=2.10=haf1e3a3_1000
   - mock=4.0.1=py_0
   - ncurses=6.1=h0a44026_1002
-  - nomkl=3.0=0
+  - nomkl=1.0=h5ca1d4c_0
   - nose=1.3.7=py38_2
   - numexpr=2.7.1=py38h9ff8ad3_0
   - numpy=1.20.0=py38h64deac9_0
   - numpy-base=1.18.5=py38hc72aeb7_0
   - openblas=0.3.4=hdc02c5d_1000
   - openssl=1.1.1k=h0d85af4_0
-  - pandas=1.0.1=py38h6c726b0_0
-  - pip=20.0.2=py_2
+  - pandas=1.2.1=py38he9f00de_0
+  - pip=21.1.2=pyhd8ed1ab_0
   - prompt_toolkit=3.0.3=py_0
   - pygments=2.5.2=py_0
-  - pytables=3.6.1=py38h4727e94_0
+  - pytables=3.6.1=py38h6f8395a_1
   - python=3.8.2=hdc38147_4_cpython
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
@@ -80,13 +80,13 @@ dependencies:
     - constantly==15.1.0
     - cryptography==2.8
     - cython==3.0a7
-    - cytoolz==0.10.1
-    - dateparser==0.7.4
+    - cytoolz==0.11.0
+    - dateparser==1.0.0
     - decorator==4.4.2
     - deprecated==1.2.7
     - distlib==0.3.0
-    - dydx-python==0.11.2
-    - dydx-v3-python==1.0.0
+    - dydx-python==0.11.3
+    - dydx-v3-python==1.0.8
     - ecdsa==0.16.0
     - entrypoints==0.3
     - eth-abi==2.1.1
@@ -105,7 +105,7 @@ dependencies:
     - hexbytes==0.2.0
     - hyperlink==19.0.0
     - identify==1.4.11
-    - idna==2.9
+    - idna==2.8
     - idna-ssl==1.1.0
     - importlib-metadata==0.23
     - incremental==17.5.0
@@ -150,14 +150,14 @@ dependencies:
     - python-telegram-bot==12.4.2
     - pyyaml==5.3
     - regex==2020.2.20
-    - requests==2.23.0
+    - requests==2.22.0
     - requests-mock==1.6.0
     - rlp==1.2.0
     - rsa==4.7
     - ruamel-yaml==0.16.10
     - ruamel-yaml-clib==0.2.0
     - service-identity==18.1.0
-    - setuptools==41.0.1
+    - setuptools==50.3.2
     - signalr-client-aio==0.0.1.6.2
     - simplejson==3.17.2
     - stringcase==1.2.0
@@ -171,12 +171,12 @@ dependencies:
     - urllib3==1.25.8
     - varint==1.0.2
     - virtualenv==20.0.8
-    - web3==5.5.1
+    - web3==5.8.0
     - websockets==8.1
     - wrapt==1.12.0
     - yarl==1.4.2
     - zipp==3.4.1
     - zope-interface==4.7.1
     - git+https://github.com/CoinAlpha/python-signalr-client.git
-    - https://hummingbot-python.s3-us-west-2.amazonaws.com/hummingsim-20200902-cp38-cp38-macosx_10_9_x86_64.whl
+    - https://hummingbot-python.s3-us-west-2.amazonaws.com/hummingsim-20210531-cp38-cp38-macosx_10_9_x86_64.whl
 prefix: /usr/local/Caskroom/miniconda/base/envs/hummingbot
