--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -123,6 +123,7 @@ jobs:
           # git show-ref HEAD | cat
           # echo $GITHUB_BASE_REF
           # echo $GITHUB_HEAD_REF
+          cat .git/HEAD
           diff-cover --fail-under=20 coverage.xml
 
       # Notify results to discord
