--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -112,6 +112,7 @@ jobs:
         run: |
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate hummingbot
+          git fetch --all
           find test/hummingbot/ -iname "test_*.py" | xargs nosetests -d -v --with-coverage --cover-inclusive --cover-package=hummingbot --cover-xml --cover-min-percentage=45
 
       - name: Validate changes coverage
@@ -122,13 +123,12 @@ jobs:
           conda activate hummingbot
           # git show-ref HEAD | cat
           # echo $GITHUB_BASE_REF
-          git fetch --all
           echo $GITHUB_HEAD_REF
           cat .git/HEAD
           git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
           cat .git/HEAD
           git symbolic-ref HEAD
-          diff-cover --fail-under=20 coverage.xml
+          diff-cover --compare-branch=$GITHUB_BASE_REF --fail-under=90 coverage.xml
 
       # Notify results to discord
       - uses: actions/setup-ruby@v1
