--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -95,13 +95,40 @@ jobs:
           conda activate hummingbot
           conda env export
           ./compile
-      - name: Run stable tests
+
+      # Install tools for coverage calculation
+      - name: Install Hummingbot
+        if: steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true'
+        shell: bash -l {0}
+        run: |
+          source /usr/share/miniconda/etc/profile.d/conda.sh
+          conda activate hummingbot
+          conda install coverage
+          pip install diff-cover
+
+      - name: Run stable tests and global coverage
         if: steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true'
         shell: bash
         run: |
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate hummingbot
-          find test/hummingbot/ -iname "test_*.py" | xargs nosetests -d -v
+          git fetch --all
+          find test/hummingbot/ -iname "test_*.py" | xargs nosetests --with-coverage --cover-inclusive --cover-package=hummingbot --cover-xml --cover-min-percentage=45
+
+      - name: Validate changes coverage
+        if: steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true'
+        shell: bash
+        run: |
+          source /usr/share/miniconda/etc/profile.d/conda.sh
+          conda activate hummingbot
+          # git show-ref HEAD | cat
+          # echo $GITHUB_BASE_REF
+          echo $GITHUB_HEAD_REF
+          cat .git/HEAD
+          git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
+          cat .git/HEAD
+          git symbolic-ref HEAD
+          diff-cover --compare-branch=$GITHUB_BASE_REF --fail-under=90 coverage.xml
 
       # Notify results to discord
       - uses: actions/setup-ruby@v1
