--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -112,8 +112,8 @@ jobs:
         run: |
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate hummingbot
-          git fetch --all
-          find test/hummingbot/ -iname "test_*.py" | xargs nosetests --with-coverage --cover-inclusive --cover-package=hummingbot --cover-xml --cover-min-percentage=45
+          git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
+          find test/hummingbot/ -iname "test_*.py" | xargs nosetests -v --with-coverage --cover-inclusive --cover-package=hummingbot --cover-xml --cover-min-percentage=45
 
       - name: Validate changes coverage
         if: steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true'
@@ -121,14 +121,7 @@ jobs:
         run: |
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate hummingbot
-          # git show-ref HEAD | cat
-          # echo $GITHUB_BASE_REF
-          echo $GITHUB_HEAD_REF
-          cat .git/HEAD
-          git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
-          cat .git/HEAD
-          git symbolic-ref HEAD
-          diff-cover --compare-branch=$GITHUB_BASE_REF --fail-under=90 coverage.xml
+          diff-cover --compare-branch=$GITHUB_BASE_REF --fail-under=50 coverage.xml
 
       # Notify results to discord
       - uses: actions/setup-ruby@v1
