--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -121,6 +121,7 @@ jobs:
         run: |
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate hummingbot
+          git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
           diff-cover --compare-branch=$GITHUB_BASE_REF --fail-under=50 coverage.xml
 
       # Notify results to discord
