--- a/hummingbot/templates/conf_avellaneda_market_making_strategy_TEMPLATE.yml
+++ b/hummingbot/templates/conf_avellaneda_market_making_strategy_TEMPLATE.yml
@@ -47,6 +47,9 @@ hanging_orders_enabled: null
 # Select way of aggregation hanging orders. Weather if leaving them as they are or calculating a resulting hanging order
 hanging_orders_aggregation_type: null
 
+# Spread (from mid price, in percentage) hanging orders will be canceled (Enter 1 to indicate 1%)
+hanging_orders_cancel_pct: null
+
 # Use user provided orders to directly override the orders placed by order_amount and order_level_parameter
 # This is an advanced feature and user is expected to directly edit this field in config file
 # Below is an sample input, the format is a dictionary, the key is user-defined order name, the value is a list which includes buy/sell, order spread, and order amount
