--- a/setup/environment-win64.yml
+++ b/setup/environment-win64.yml
@@ -8,7 +8,7 @@ dependencies:
   - bzip2=1.0.8=he774522_0
   - ca-certificates=2020.1.1=0
   - certifi=2019.11.28=py38_0
-  - coverage=5.5=py38h9ed2024_2
+  - coverage=5.5
   - cython=0.29.15=py38ha925a31_0
   - hdf5=1.10.4=h7ebc959_0
   - icc_rt=2019.0.0=h0cc432a_1
