--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -95,26 +95,13 @@ jobs:
           conda activate hummingbot
           conda env export
           ./compile
-
-      - name: Run stable tests and global coverage
+      - name: Run stable tests
         if: steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true'
         shell: bash
         run: |
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate hummingbot
-          git fetch --all -q
-          git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
-          find test/hummingbot/ -iname "test_*.py" | xargs nosetests -v --with-coverage --cover-inclusive --cover-package=hummingbot --cover-xml --cover-min-percentage=45
-
-      - name: Validate changes coverage
-        if: steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true'
-        shell: bash
-        run: |
-          source /usr/share/miniconda/etc/profile.d/conda.sh
-          conda activate hummingbot
-          git fetch --all -q
-          git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
-          diff-cover --compare-branch=origin/$GITHUB_BASE_REF --fail-under=50 coverage.xml
+          find test/hummingbot/ -iname "test_*.py" | xargs nosetests -d -v
 
       # Notify results to discord
       - uses: actions/setup-ruby@v1
