--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -95,7 +95,6 @@ jobs:
           conda activate hummingbot
           conda env export
           ./compile
-
       - name: Run stable tests and global coverage
         if: steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true'
         shell: bash
@@ -105,8 +104,7 @@ jobs:
           git fetch --all -q
           git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
           find test/hummingbot/ -iname "test_*.py" | xargs nosetests -v --with-coverage --cover-inclusive --cover-package=hummingbot --cover-xml --cover-min-percentage=45
-
-      - name: Validate changes coverage
+      - name: Validate coverage for the changes
         if: steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true'
         shell: bash
         run: |
