--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -105,7 +105,7 @@ jobs:
           git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
           find test/hummingbot/ -iname "test_*.py" | xargs nosetests -v --with-coverage --cover-inclusive --cover-package=hummingbot --cover-xml --cover-min-percentage=45
       - name: Validate coverage for the changes
-        if: steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true'
+        if: github.event_name == 'pull_request' && (steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true')
         shell: bash
         run: |
           source /usr/share/miniconda/etc/profile.d/conda.sh
