--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,6 +15,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+          if: github.event_name == 'pull_request'
+          with:
+            fetch-depth: 0
+            ref: ${{ github.event.pull_request.head.ref }}
+
+      - uses: actions/checkout@v2
+        if: github.event_name == 'push'
+        with:
+          fetch-depth: 0
     
       # Use cache's hashFiles function to check for changes in core code
       - name: Check for code changes
@@ -102,7 +111,6 @@ jobs:
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate hummingbot
           git fetch --all -q
-          git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
           find test/hummingbot/ -iname "test_*.py" | xargs nosetests -v --with-coverage --cover-inclusive --cover-package=hummingbot --cover-xml --cover-min-percentage=45
       - name: Validate coverage for the changes
         if: github.event_name == 'pull_request' && (steps.program-changes.outputs.cache-hit != 'true' || steps.conda-dependencies.outputs.cache-hit != 'true')
@@ -111,7 +119,6 @@ jobs:
           source /usr/share/miniconda/etc/profile.d/conda.sh
           conda activate hummingbot
           git fetch --all -q
-          git symbolic-ref HEAD refs/remotes/origin/$GITHUB_HEAD_REF
           diff-cover --compare-branch=origin/$GITHUB_BASE_REF --fail-under=50 coverage.xml
 
       # Notify results to discord
