--- a/hummingbot/templates/conf_dev_4_twap_strategy_TEMPLATE.yml
+++ b/hummingbot/templates/conf_dev_4_twap_strategy_TEMPLATE.yml
@@ -9,7 +9,7 @@ strategy: null
 
 # Exchange and token parameters
 exchange: null
-market: null
+trading_pair: null
 
 # Type of Order (Limit/Market)
 order_type: null
@@ -25,14 +25,11 @@ order_price: null
 # it will cancel the limit order.
 cancel_order_wait_time: null
 
-# How many orders to place
-num_individual_orders: null
-
 # How long to between placing incremental orders
-time_delay: null
+order_delay_time: null
 
-# Specify buy/sell. Set to True for Buy and False for Sell
-is_buy: null
+# Specify buy/sell.
+trade_side: "buy"
 
 # For more detailed information, see:
 # https://docs.hummingbot.io/strategies/simple-trade/#configuration-parameters
