Fix in the calculation of the average filled orders price. Change the name of the exchange configuration to connector to reduce the list of available connectors to the spot ones

--- a/hummingbot/templates/conf_dev_4_twap_strategy_TEMPLATE.yml
+++ b/hummingbot/templates/conf_dev_4_twap_strategy_TEMPLATE.yml
@@ -8,7 +8,7 @@ strategy: null
 # twap strategy
 
 # Exchange and token parameters
-exchange: null
+connector: null
 trading_pair: null
 
 # Total amount to be traded, considering all orders
