--- a/hummingbot/templates/conf_avellaneda_market_making_strategy_TEMPLATE.yml
+++ b/hummingbot/templates/conf_avellaneda_market_making_strategy_TEMPLATE.yml
@@ -44,8 +44,8 @@ add_transaction_costs: null
 # when one side is filled (hanging orders feature) (true/false).
 hanging_orders_enabled: null
 
-# Select way of aggregating hanging orders. Whether if leaving them as they are or calculating a resulting hanging order
-hanging_orders_aggregation_type: null
+## Select way of aggregating hanging orders. Whether if leaving them as they are or calculating a resulting hanging order
+#hanging_orders_aggregation_type: null
 
 # Spread (from mid price, in percentage) hanging orders will be canceled (Enter 1 to indicate 1%)
 hanging_orders_cancel_pct: null
