--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 documentation/content/protocol-connectors/img/terra-create-wallet.gif filter=lfs diff=lfs merge=lfs -text
 public/a6d8aa1eaf2d55af37a5444b9d36c2ae/opening-orders-1.gif filter=lfs diff=lfs merge=lfs -text
+documentation/node_modules/puppeteer/.local-chromium/mac-686378/chrome-mac/Chromium.app/Contents/Frameworks/Chromium[[:space:]]Framework.framework/Versions/78.0.3882.0/Chromium[[:space:]]Framework filter=lfs diff=lfs merge=lfs -text
