--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -3,7 +3,7 @@
 #################################
 
 # For more detailed information: https://docs.hummingbot.io
-template_version: 21
+template_version: 22
 
 # Exchange configs
 bamboo_relay_use_coordinator: false
@@ -228,3 +228,8 @@ global_token:
 
 # A symbol for the global token, e.g. $, €
 global_token_symbol:
+
+# Percentage of API rate limits (on any exchange and any end point) allocated to this bot instance.
+# Enter 50 to indicate 50%. E.g. if the API rate limit is 100 calls per second, and you allocate 50% to this setting,
+# the bot will have a maximum (limit) of 50 calls per second
+rate_limits_share_pct:
