added temp guide

--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -206,3 +206,4 @@ nav:
     - 0.2.0: release-notes/0.2.0.md
   - Guides:
     - Overview: guides/index.md
+    - How to Create a Strategy: guides/strategy.md
