--- a/hummingbot/templates/conf_perpetual_market_making_strategy_TEMPLATE.yml
+++ b/hummingbot/templates/conf_perpetual_market_making_strategy_TEMPLATE.yml
@@ -120,6 +120,9 @@ price_source_market: null
 # An external api that returns price (for custom_api pricing source).
 price_source_custom_api: null
 
+# An interval time in second to update the price from custom api (for custom_api pricing source).
+custom_api_update_interval: null
+
 #Take order if they cross order book when external price source is enabled
 take_if_crossed: null
 
