Fix tests that create NdaxExchange instances with the old parameter names

--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -109,7 +109,7 @@ probit_kr_api_key: null
 probit_kr_secret_key: null
 
 ndax_username: null
-ndax_user_id: null
+ndax_uid: null
 ndax_api_key: null
 ndax_secret_key: null
 
