--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -93,7 +93,20 @@ nav:
       - Cloud Server Guide: installation/cloud.md
       - Updating Hummingbot: installation/updating.md
     - Operation:
-      - Overview: operation/index.md
+      - Overview: operation/overview.md
+      - User Interface: operation/user-interface.md
+      - Launch and Exit Hummingbot: operation/launch-exit.md
+      - Create and Delete Password: operation/password.md
+      - Connecting to Exchange: operation/connect-exchange.md
+      - Checking Balances: operation/balances.md
+      - Create or Import Config Files: operation/config-files.md
+      - Start and Stop Strategy: operation/start-stop.md
+      - Pause and Resume Strategy: operation/pause-resume.md
+      - Check Bot and Market Status: operation/checking-status.md
+      - Performance History: operation/performance-history.md
+      - Override Fees: operation/override-fees.md
+      - Log Files: operation/log-files.md
+      - Strategy Autostart: operation/strategy-autostart.md
     - Strategies:
       - Overview: strategies/index.md
       - Pure Market Making: strategies/pure-market-making.md
