--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -93,7 +93,7 @@ nav:
       - Cloud Server Guide: installation/cloud.md
       - Updating Hummingbot: installation/updating.md
     - Operation:
-      - Overview: operation/overview.md
+      - Overview: operation/index.md
       - User Interface Guide: operation/user-interface.md
       - Launch and Exit Hummingbot: operation/launch-exit.md
       - Create and Delete Password: operation/password.md
