--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -108,12 +108,13 @@ probit_secret_key: null
 probit_kr_api_key: null
 probit_kr_secret_key: null
 
-ndax_username: null
 ndax_uid: null
+ndax_account_name: null
 ndax_api_key: null
 ndax_secret_key: null
 
 #ndax_testnet_user_id: null
+#ndax_testnet_account_name: null
 #ndax_testnet_api_key: null
 #ndax_testnet_secret_key: null
 
