Added the required changes to enable NDAX to work connecting either to the production endpoints or the test endpoints. Also included some fixes for the connector initialization logic

--- a/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
+++ b/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
@@ -93,5 +93,5 @@ probit_kr_taker_fee:
 ndax_maker_fee:
 ndax_taker_fee:
 
-#ndax_testnet_maker_fee:
-#ndax_testnet_taker_fee:
+ndax_testnet_maker_fee:
+ndax_testnet_taker_fee:
