--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -113,10 +113,10 @@ ndax_account_name: null
 ndax_api_key: null
 ndax_secret_key: null
 
-#ndax_testnet_user_id: null
-#ndax_testnet_account_name: null
-#ndax_testnet_api_key: null
-#ndax_testnet_secret_key: null
+ndax_testnet_uid: null
+ndax_testnet_account_name: null
+ndax_testnet_api_key: null
+ndax_testnet_secret_key: null
 
 # Ethereum wallet address: required for trading on a DEX
 ethereum_wallet: null
