--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -132,19 +132,42 @@ nav:
       - Max Order Age: strategies/advanced-market-making/max-order-age.md
     - Connectors:
       - Overview: connectors/index.md
+      - AscendEX: connectors/ascend-ex.md
+      - Balancer: connectors/balancer.md
       - Bamboo Relay: connectors/bamboo-relay.md
+      - Beaxy: connectors/beaxy.md
       - Binance: connectors/binance.md
+      - Binance Perpetual: connectors/binance-perpetual.md
+      - Binance US: connectors/binance-us.md
       - Bitfinex: connectors/bitfinex.md
       - Bittrex Global: connectors/bittrex.md
       - Coinbase Pro: connectors/coinbase.md
+      - CoinZoom: connectors/coinzoom.md
       - Crypto.com : connectors/crypto-com.md
+      - Digifinex: connectors/digifinex.md
+      - Dolomite: connectors/dolomite.md
+      - DyDx: connectors/dydx.mc
+      - DyDx Perpetual: connectors/dydx-perpetual.md
+      - FTX: connectors/ftx.md
+      - Gate.io: connectors/gate-io.md
+      - HitBTC: connectors/hitbtc.md
       - Huobi Global: connectors/huobi.md
       - KuCoin: connectors/kucoin.md
       - Kraken: connectors/kraken.md
       - Liquid: connectors/liquid.md
       - Loopring: connectors/loopring.md
+      - OKEx: connectors/okex.md
+      - Perpetual Finance: connectors/perp-fi.md
+      - ProBit Global: connectors/probit.md
+      - ProBit Korea: connectors/probit-korea.md
       - Radar Relay: connectors/radar-relay.md
- 
+      - Terra: connectors/terra.md
+      - Uniswap: connectors/uniswap.md
+      - Uniswap v3: connectors/uniswap-v3.md
+    - Scripts:
+      - Overview: scripts/index.md
+      - Script Base: scripts/script-base.md
+
   - Developer Manual:
       - Intro: developers/index.md
       - Getting Started:
