--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -218,17 +218,18 @@ heartbeat_interval_min:
 # a list of binance markets (for trades/pnl reporting) separated by ',' e.g. RLC-USDT,RLC-BTC
 binance_markets:
 
-
+# previously imported strategy
+previous_strategy:
 
 # Command Shortcuts
 # Define abbreviations for often used commands
 # or batch grouped commands together
 #
 command_shortcuts:
-- command: spreads
-  help: Set bid and ask spread
-  arguments: ['Bid Spread', 'Ask Spread']
-  output: ['config bid_spread $1', 'config ask_spread $2']
+  - command: spreads
+    help: Set bid and ask spread
+    arguments: ['Bid Spread', 'Ask Spread']
+    output: ['config bid_spread $1', 'config ask_spread $2']
 
 # A source for rate oracle, currently binance or coingecko
 rate_oracle_source:
