--- a/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
+++ b/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
@@ -35,6 +35,9 @@ bittrex_taker_fee:
 kucoin_maker_fee:
 kucoin_taker_fee:
 
+bitmart_maker_fee:
+bitmart_taker_fee:
+
 crypto_com_maker_fee:
 crypto_com_taker_fee:
 
